# atmaCup_18

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data_desc/: data_desc.md
notebook/eda/: visualize_trajectory.ipynb
src/: constants.py  metrics.py  preprocess.py  util.py
src/feature_extract/: common.py  depth.py  semantic.py
src/image/: dataset.py  model.py  preprocess.py  scheduler.py  test.py  train.py
src/image/exp/: efficientnet_b7.py
src/table/: lgbm.py  pipeline.py  pipeline_best.py  pipeline_optimize.py  preprocess.py
src/table/feature/: __init__.py  base.py  cnn.py  depth.py  naive.py  semantic.py  shift_diff.py  traffic_light.py
src/viz/: trajectory.py
