[project]
name = "atmacup_18"
version = "0.1.0"
description = "atmacup_18"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "torch",
    "kaggle",
    "kaggul@git+https://github.com/welshonionman/kaggul",
    "tqdm",
    "wandb",
    "tbvaccine",
    "matplotlib",
    "pandas",
    "pyarrow",
    "jupyter",
    "ipykernel",
    "numpy",
    "lightgbm",
    "polars",
    "scikit-learn",
    "seaborn",
    "albumentations",
    "timm",
    "warmup-scheduler>=0.3",
    "transformers>=4.46.2",
    "bitsandbytes>=0.44.1",
    "einops>=0.8.0",
    "accelerate>=1.1.1",
    "sentencepiece>=0.2.0",
    "slack-sdk>=3.33.4",
    "optuna>=4.1.0",
]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "B",    # flake8-bugbear
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "A",    # flake8-builtins
]

ignore = [
  "B007", # unused-loop-control-variable
  "I001", # unsorted-imports
  "E501", # line too long
]

unfixable = [
  "F401", # unused import
  "F841", # unused variable
]

exclude = [
  ".venv",
  "__pycache__",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
exclude= [
    ".input",
    ".venv",
    ".dataset",
]
pythonVersion = "3.12"
